plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin'
}

group 'MainApp'
version '1.0'

repositories {
    mavenCentral()
}

task prepareKotlinBuildScriptModel {
}

ext {
    junitVersion = '5.7.1'
}

sourceCompatibility = '16'
targetCompatibility = '16'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'HelloApplication'
}

javafx {
    version = '16'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation project (':Server')
    implementation('org.controlsfx:controlsfx:11.1.0')

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2"
    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.2"

    implementation 'org.mongodb:mongodb-driver-sync:4.11.0'

    implementation 'com.google.code.gson:gson:2.9.0'

}

test {
    useJUnitPlatform()
}